--- a/content/publications/conference-paper/cite.bib
+++ b/content/publications/conference-paper/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@misc{liu2025tactfultomllmstheorymind,
+      title={TactfulToM: Do LLMs Have the Theory of Mind Ability to Understand White Lies?}, 
+      author={Yiwei Liu and Emma Jane Pretty and Jiahao Huang and Saku Sugawara},
+      year={2025},
+      eprint={2509.17054},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2509.17054}, 
 }
